objects/ASI_MFM_BU__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Auto_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Available_for_Accrual_PO_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Accrual PO Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Code__c</fullName>
        <label>BU Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Description__c</fullName>
        <label>BU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>BU External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_BU_Mapping__c</fullName>
        <label>BU Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Base_Currency__c</fullName>
        <label>Base Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CN_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>GF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Invoice_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Is_Logsitic_BU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Logsitic BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_L1_Description__c</fullName>
        <label>L1 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Nagoya</fullName>
                </value>
                <value>
                    <fullName>Sales National</fullName>
                </value>
                <value>
                    <fullName>Sales Osaka G1</fullName>
                </value>
                <value>
                    <fullName>Sales Osaka G2</fullName>
                </value>
                <value>
                    <fullName>Sales Osaka CS</fullName>
                </value>
                <value>
                    <fullName>Sales Osaka ALL</fullName>
                </value>
                <value>
                    <fullName>New biz development Prjct</fullName>
                </value>
                <value>
                    <fullName>Sales Sendai</fullName>
                </value>
                <value>
                    <fullName>Sales Sapporo</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo G1</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo G2</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo G3</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo CS</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo All</fullName>
                </value>
                <value>
                    <fullName>Finance Adjustment JP</fullName>
                </value>
                <value>
                    <fullName>Sales Osaka ALL 2</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo HR</fullName>
                </value>
                <value>
                    <fullName>Sales Tokyo PB</fullName>
                </value>
                <value>
                    <fullName>Not analyzed location</fullName>
                </value>
                <value>
                    <fullName>All_BU</fullName>
                </value>
                <value>
                    <fullName>All BU IT 331</fullName>
                </value>
                <value>
                    <fullName>All Local BU IT in 331</fullName>
                </value>
                <value>
                    <fullName>All Area_Central Fund_PRADF</fullName>
                </value>
                <value>
                    <fullName>All Area_PRC_PRADF</fullName>
                </value>
                <value>
                    <fullName>All Area_Duty Free_PRADF</fullName>
                </value>
                <value>
                    <fullName>All Area_Macau_PRADF</fullName>
                </value>
                <value>
                    <fullName>Zhejiang_C_YJ</fullName>
                </value>
                <value>
                    <fullName>Jiangsu_C_YJ</fullName>
                </value>
                <value>
                    <fullName>NonSpecific Area_C_YJ</fullName>
                </value>
                <value>
                    <fullName>Shanghai_C_YJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_L1__c</fullName>
        <label>L1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NG1</fullName>
                </value>
                <value>
                    <fullName>NL1</fullName>
                </value>
                <value>
                    <fullName>O11</fullName>
                </value>
                <value>
                    <fullName>O21</fullName>
                </value>
                <value>
                    <fullName>OC1</fullName>
                </value>
                <value>
                    <fullName>OS1</fullName>
                </value>
                <value>
                    <fullName>PJ1</fullName>
                </value>
                <value>
                    <fullName>SD1</fullName>
                </value>
                <value>
                    <fullName>SP1</fullName>
                </value>
                <value>
                    <fullName>T11</fullName>
                </value>
                <value>
                    <fullName>T21</fullName>
                </value>
                <value>
                    <fullName>T31</fullName>
                </value>
                <value>
                    <fullName>TC1</fullName>
                </value>
                <value>
                    <fullName>TK1</fullName>
                </value>
                <value>
                    <fullName>YY1</fullName>
                </value>
                <value>
                    <fullName>SO1</fullName>
                </value>
                <value>
                    <fullName>TH1</fullName>
                </value>
                <value>
                    <fullName>TP1</fullName>
                </value>
                <value>
                    <fullName>ZZ1</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>001_IT_331</fullName>
                </value>
                <value>
                    <fullName>002_LOCAL_IT_331</fullName>
                </value>
                <value>
                    <fullName>BCAA00384</fullName>
                </value>
                <value>
                    <fullName>01AA00384</fullName>
                </value>
                <value>
                    <fullName>02AA00384</fullName>
                </value>
                <value>
                    <fullName>03AA00384</fullName>
                </value>
                <value>
                    <fullName>12ZJ00307</fullName>
                </value>
                <value>
                    <fullName>12JS00307</fullName>
                </value>
                <value>
                    <fullName>12NA00307</fullName>
                </value>
                <value>
                    <fullName>12SH00307</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_L2_Description__c</fullName>
        <label>L2 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Delegated_DP</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Information Technology 331</fullName>
                </value>
                <value>
                    <fullName>Central Fund_PRADF</fullName>
                </value>
                <value>
                    <fullName>PRC_PRADF</fullName>
                </value>
                <value>
                    <fullName>Duty Free_PRADF</fullName>
                </value>
                <value>
                    <fullName>Macau_PRADF</fullName>
                </value>
                <value>
                    <fullName>Central Region (Shanghai)_YJ</fullName>
                </value>
                <value>
                    <fullName>NationWide_YJ</fullName>
                </value>
                <value>
                    <fullName>North Region (Beijing)_YJ</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Sales Duty Free Sales_DF</fullName>
                </value>
                <value>
                    <fullName>Marketing_DP</fullName>
                </value>
                <value>
                    <fullName>South Region (Guangzhou)_YJ</fullName>
                </value>
                <value>
                    <fullName>East Region (Xiamen)_YJ</fullName>
                </value>
                <value>
                    <fullName>South West Region_YJ</fullName>
                </value>
                <value>
                    <fullName>North West Region_YJ</fullName>
                </value>
                <value>
                    <fullName>Central Fund_ADCN</fullName>
                </value>
                <value>
                    <fullName>Duty Free_ADCN</fullName>
                </value>
                <value>
                    <fullName>Macau_ADCN</fullName>
                </value>
                <value>
                    <fullName>Central Fund_PRHK</fullName>
                </value>
                <value>
                    <fullName>PRC_PRHK</fullName>
                </value>
                <value>
                    <fullName>North Region (Beijing)_SM</fullName>
                </value>
                <value>
                    <fullName>South Region (Guangzhou)_SM</fullName>
                </value>
                <value>
                    <fullName>East Region (Xiamen)_SM</fullName>
                </value>
                <value>
                    <fullName>NationWide_PRCN</fullName>
                </value>
                <value>
                    <fullName>Central Region (Shanghai)_PRCN</fullName>
                </value>
                <value>
                    <fullName>North West Region_PRCN</fullName>
                </value>
                <value>
                    <fullName>Duty Free_PRHK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_L2__c</fullName>
        <label>L2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>22101_DP</fullName>
                </value>
                <value>
                    <fullName>381IT</fullName>
                </value>
                <value>
                    <fullName>331IT</fullName>
                </value>
                <value>
                    <fullName>BC1_00384</fullName>
                </value>
                <value>
                    <fullName>011_00384</fullName>
                </value>
                <value>
                    <fullName>021_00384</fullName>
                </value>
                <value>
                    <fullName>031_00384</fullName>
                </value>
                <value>
                    <fullName>121_00307</fullName>
                </value>
                <value>
                    <fullName>021_00307</fullName>
                </value>
                <value>
                    <fullName>041_00307</fullName>
                </value>
                <value>
                    <fullName>00558</fullName>
                </value>
                <value>
                    <fullName>32104</fullName>
                </value>
                <value>
                    <fullName>22100_DF</fullName>
                </value>
                <value>
                    <fullName>22101_MK</fullName>
                </value>
                <value>
                    <fullName>081_00307</fullName>
                </value>
                <value>
                    <fullName>161_00307</fullName>
                </value>
                <value>
                    <fullName>291_00307</fullName>
                </value>
                <value>
                    <fullName>311_00307</fullName>
                </value>
                <value>
                    <fullName>BC1_28802</fullName>
                </value>
                <value>
                    <fullName>021_28802</fullName>
                </value>
                <value>
                    <fullName>031_28802</fullName>
                </value>
                <value>
                    <fullName>BC1_00324</fullName>
                </value>
                <value>
                    <fullName>011_00324</fullName>
                </value>
                <value>
                    <fullName>041_36704</fullName>
                </value>
                <value>
                    <fullName>081_36708</fullName>
                </value>
                <value>
                    <fullName>161_36716</fullName>
                </value>
                <value>
                    <fullName>101_39810</fullName>
                </value>
                <value>
                    <fullName>201_39820</fullName>
                </value>
                <value>
                    <fullName>301_39830</fullName>
                </value>
                <value>
                    <fullName>021_00324</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_L3_Description__c</fullName>
        <label>L3 Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Information Technology_IT331</fullName>
                </value>
                <value>
                    <fullName>PRADF (PRC)</fullName>
                </value>
                <value>
                    <fullName>PRC Yi Jia</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>AD China (PRC)</fullName>
                </value>
                <value>
                    <fullName>PRHK (PRC)</fullName>
                </value>
                <value>
                    <fullName>PRC SEAMART</fullName>
                </value>
                <value>
                    <fullName>PR China</fullName>
                </value>
                <value>
                    <fullName>AD Shanghai</fullName>
                </value>
                <value>
                    <fullName>PR Singapore</fullName>
                </value>
                <value>
                    <fullName>Duty Free - Philippines</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Free</fullName>
                </value>
                <value>
                    <fullName>Philippine Duty Paid</fullName>
                </value>
                <value>
                    <fullName>Duty Free - HK &amp; TW</fullName>
                </value>
                <value>
                    <fullName>Duty Free - Others</fullName>
                </value>
                <value>
                    <fullName>Regional Marketing</fullName>
                </value>
                <value>
                    <fullName>Regional Marketing_RM331</fullName>
                </value>
                <value>
                    <fullName>PR Malaysia</fullName>
                </value>
                <value>
                    <fullName>Taiwan 223</fullName>
                </value>
                <value>
                    <fullName>Taiwan 287</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_L3__c</fullName>
        <label>L3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00221</fullName>
                </value>
                <value>
                    <fullName>00381</fullName>
                </value>
                <value>
                    <fullName>00331</fullName>
                </value>
                <value>
                    <fullName>00384</fullName>
                </value>
                <value>
                    <fullName>00307</fullName>
                </value>
                <value>
                    <fullName>00558</fullName>
                </value>
                <value>
                    <fullName>32104</fullName>
                </value>
                <value>
                    <fullName>28802</fullName>
                </value>
                <value>
                    <fullName>00324</fullName>
                </value>
                <value>
                    <fullName>36704</fullName>
                </value>
                <value>
                    <fullName>39810</fullName>
                </value>
                <value>
                    <fullName>39110</fullName>
                </value>
                <value>
                    <fullName>00777</fullName>
                </value>
                <value>
                    <fullName>32103</fullName>
                </value>
                <value>
                    <fullName>29000</fullName>
                </value>
                <value>
                    <fullName>29010</fullName>
                </value>
                <value>
                    <fullName>00326</fullName>
                </value>
                <value>
                    <fullName>00386</fullName>
                </value>
                <value>
                    <fullName>00828</fullName>
                </value>
                <value>
                    <fullName>00223</fullName>
                </value>
                <value>
                    <fullName>00287</fullName>
                </value>
                <value>
                    <fullName>00222</fullName>
                </value>
                <value>
                    <fullName>00327</fullName>
                </value>
                <value>
                    <fullName>00328</fullName>
                </value>
                <value>
                    <fullName>39820</fullName>
                </value>
                <value>
                    <fullName>39830</fullName>
                </value>
                <value>
                    <fullName>39840</fullName>
                </value>
                <value>
                    <fullName>39850</fullName>
                </value>
                <value>
                    <fullName>39860</fullName>
                </value>
                <value>
                    <fullName>39870</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_OPEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OPEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PL_Business_Unit__c</fullName>
        <label>PL Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Record_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BU</label>
    <listViews>
        <fullName>ASI_MFM_CAPEX_All_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_BU</value>
        </filters>
        <filters>
            <field>ASI_MFM_OPEX__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All CAPEX BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_All_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_BU</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>CAP BU - Active</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_All_BU_All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_BU</value>
        </filters>
        <label>CAP BU - All</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_All_BU_For_Accrual</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_BU</value>
        </filters>
        <filters>
            <field>ASI_MFM_Inactive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ASI_MFM_Available_for_Accrual_PO_Payment__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CAP BU - Active - For Accrual</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_HK_All_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_HK_BU</value>
        </filters>
        <label>All CAP HK BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_JP_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_JP_BU</value>
        </filters>
        <label>CAP JP BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_OTH_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_PL_Business_Unit__c</columns>
        <columns>ASI_MFM_OPEX__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <columns>ASI_MFM_Available_for_Accrual_PO_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_OTH_BU</value>
        </filters>
        <label>All CAP Other BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TW_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_SG_All_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_SG_BU</value>
        </filters>
        <label>All CAP SG BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_SG_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MFM_CAP_TH_All_BU</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <columns>ASI_MFM_L1__c</columns>
        <columns>ASI_MFM_L1_Description__c</columns>
        <columns>ASI_MFM_L2__c</columns>
        <columns>ASI_MFM_L2_Description__c</columns>
        <columns>ASI_MFM_L3__c</columns>
        <columns>ASI_MFM_L3_Description__c</columns>
        <columns>ASI_MFM_Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_MFM_CAP_TH_BU</value>
        </filters>
        <label>All CAP TH BU</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_MFM_CAP_TH_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_HK_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_HK_BU</value>
        </filters>
        <label>All TnE HK</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_HK_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_ID_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_ID_BU</value>
        </filters>
        <label>All TnE ID</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_ID_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_MY_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_MY_BU</value>
        </filters>
        <label>All TnE MY</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_MY_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_PH_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_PH_BU</value>
        </filters>
        <label>All TnE PH</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_PH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_SG_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_SG_BU</value>
        </filters>
        <label>All TnE SG</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_SG_Finance_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TnE_TH_All</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_BU_Code__c</columns>
        <columns>ASI_MFM_BU_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_BU__c.ASI_TnE_TH_BU</value>
        </filters>
        <label>All TnE TH</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TnE_TH_Finance_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>BU</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BUs</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_BU</fullName>
        <active>true</active>
        <label>CAP BU</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_HK_BU</fullName>
        <active>true</active>
        <label>CAP HK BU</label>
    </recordTypes>
</CustomObject>